feat: Add reusable HanoiButton Composable and new string resources
This commit introduces a new reusable `HanoiButton` Composable and adds new string resources for dialogs and algorithm configuration.

Key changes:
- Created `app/src/main/java/com/sosorio/hanoiapp/presentation/components/HanoiButton.kt`:
    - Defines a `HanoiButton` Composable that takes a description, an `onClick` lambda, and a `HanoiButtonType`.
    - `HanoiButtonType` is an enum with `MAIN` and `SECONDARY` types, which determine the button's container color, content color, and border.
        - `MAIN`: Primary color background, background color text, transparent border.
        - `SECONDARY`: Background color background, primary color text, primary color border.
    - The button displays text with a font size of 16.sp and bold weight.
    - Includes two `@Preview` functions:
        - `HanoiButtonPreview` for the `MAIN` button type (e.g., "Save").
        - `HanoiSecondaryButtonPreview` for the `SECONDARY` button type (e.g., "Cancel").
- Updated `app/src/main/res/values/strings.xml`:
    - Added new string resources:
        - `configure_algorithm`: "Configure algorithm"
        - `number_of_disks`: "Number of disks"
        - `cancel`: "Cancel"
        - `save`: "Save"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="play">Play</string>
     <string name="restart">Restart</string>
     <string name="next">Next</string>
+    <string name="configure_algorithm">Configure algorithm</string>
+    <string name="number_of_disks">Number of disks</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
 </resources>
