feat: Add ConfigurationSheet Composable and related data class
This commit introduces the `ConfigurationSheet` Composable, which allows users to configure algorithm parameters, and the `AlgorithmConfiguration` data class to hold these settings.

Key changes:
- Created `app/src/main/java/com/sosorio/hanoiapp/presentation/components/sheet/ConfigurationSheet.kt`:
    - Defines the `ConfigurationSheet` Composable.
    - Displays a title "Configure algorithm".
    - Contains two `HanoiTextField` components:
        - One for "Number of disks".
        - One for "Move animation time (ms)".
    - Includes "Cancel" and "Save" `HanoiButton`s.
    - State for `numberOfDisks` and `timeInMs` is managed internally using `remember` and `mutableStateOf`.
    - `onSaveClick` callback provides the updated `AlgorithmConfiguration`.
    - `onCancelClick` callback for dismissing the sheet.
    - Styled with a rounded top and background color from `MaterialTheme.colorScheme.background`.
    - Includes a `@Preview` function `ConfigurationSheetPreview` for visualization.
- Created `app/src/main/java/com/sosorio/hanoiapp/presentation/components/sheet/AlgorithmConfiguration.kt`:
    - Defines the `AlgorithmConfiguration` data class with `numberOfDisks` (Int) and `movementTimeInMs` (Long) properties.
- Updated `app/src/main/res/values/strings.xml`:
    - Added the string resource `move_animation_time_ms` with the value "Move animation time (ms)".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="next">Next</string>
     <string name="configure_algorithm">Configure algorithm</string>
     <string name="number_of_disks">Number of disks</string>
+    <string name="move_animation_time_ms">Move animation time (ms)</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 </resources>
