feat: Add movement history display
This commit introduces the ability to display a history of disk movements.

Key changes:
- `app/src/main/res/values/strings.xml`:
    - Added a new string resource `step_movement_description` for formatting movement log entries.
- `app/src/main/java/com/sosorio/hanoiapp/presentation/components/label/MovementHistoryList.kt`:
    - Added a new Composable `MovementHistoryList` that displays a list of `MovementLog` items in a `LazyColumn`.
    - The list automatically scrolls to the latest movement.
    - The list has a border and rounded corners.
- `app/src/main/java/com/sosorio/hanoiapp/utils/IntUtils.kt`:
    - Added a new extension function `Int.toRodLabel()` to convert rod indices (0, 1, 2) to their corresponding labels ("A", "B", "C").
- `app/src/main/java/com/sosorio/hanoiapp/presentation/components/label/MovementLabel.kt`:
    - Added a new Composable `MovementLabel` to display a single movement log entry.
    - It uses the `step_movement_description` string resource for formatting.
    - Added a data class `MovementLog` to represent a single movement with `diskIndex`, `fromRod`, and `toRod`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="move_animation_time_ms">Move animation time (ms)</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+    <string name="step_movement_description">Take disk %1$d from rod %2$s to rod %3$s</string>
 </resources>
