feat: Add error message display and clearing logic
This commit introduces an error message display mechanism in the UI and ensures errors are cleared when the game or algorithm restarts.

Key changes:
- `app/src/main/java/com/sosorio/hanoiapp/presentation/screens/home/HomeViewModel.kt`:
    - `startAlgorithm()`: Now calls `clearErrorMessage()` before restarting the algorithm and observing movements.
    - `resetGame()`: Now calls `clearErrorMessage()` after clearing the movement history.
    - Added `clearErrorMessage()`: Updates `_uiState` to set `errorMessage` to `null`.
- `app/src/main/java/com/sosorio/hanoiapp/presentation/screens/home/HomeScreen.kt`:
    - Imported `com.sosorio.hanoiapp.presentation.components.label.ErrorMessageLabel`.
    - Added an `ErrorMessageLabel` composable below the `HanoiAppBar`.
        - It displays `uiState.errorMessage` (mapped to a string resource).
        - It fills the maximum width.
- `app/src/main/res/values/strings.xml`:
    - Added a new string resource `something_went_wrong`.
- `app/src/main/java/com/sosorio/hanoiapp/presentation/components/label/ErrorMessageLabel.kt`:
    - Created a new composable `ErrorMessageLabel` to display an optional error message.
    - The text is styled with bold font, 16.sp size, error color from the MaterialTheme, and centered alignment.
    - Padding of 8.dp is applied.
    - Includes a `@Preview` for this composable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="step_movement_description">Take disk %1$d from rod %2$s to rod %3$s</string>
+    <string name="something_went_wrong">Something went wrong</string>
 </resources>
